# name: TestRetention.test_day_interval_sampled
  '
  SELECT actor_activity.breakdown_values AS breakdown_values,
         actor_activity.intervals_from_base AS intervals_from_base,
         count(DISTINCT actor_activity.actor_id) AS count
  FROM
    (SELECT DISTINCT breakdown_values,
                     intervals_from_base,
                     actor_id
     FROM
       (SELECT target_event.breakdown_values AS breakdown_values,
               dateDiff('day', target_event.event_date, returning_event.event_date) AS intervals_from_base,
               returning_event.target AS actor_id
        FROM
          (SELECT DISTINCT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS event_date,
                           e__pdi.person_id AS target,
                           [dateDiff('day', toStartOfDay(toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), toStartOfDay(toTimeZone(e.timestamp, 'UTC')))] AS breakdown_values
           FROM events AS e SAMPLE 1.0
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$pageview'), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-21 00:00:00.000000', 6, 'UTC'))))) AS target_event
        JOIN
          (SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS event_date,
                  e__pdi.person_id AS target
           FROM events AS e SAMPLE 1.0
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$pageview'), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-21 00:00:00.000000', 6, 'UTC'))))
           GROUP BY target,
                    event_date) AS returning_event ON equals(returning_event.target, target_event.target)
        WHERE ifNull(greater(returning_event.event_date, target_event.event_date), 0)
        UNION ALL SELECT target_event.breakdown_values AS breakdown_values,
                         0 AS intervals_from_base,
                         target_event.target AS actor_id
        FROM
          (SELECT DISTINCT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS event_date,
                           e__pdi.person_id AS target,
                           [dateDiff('day', toStartOfDay(toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), toStartOfDay(toTimeZone(e.timestamp, 'UTC')))] AS breakdown_values
           FROM events AS e SAMPLE 1.0
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$pageview'), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-21 00:00:00.000000', 6, 'UTC'))))) AS target_event)
     WHERE and(or(1, isNull(breakdown_values)), or(1, isNull(intervals_from_base)))) AS actor_activity
  GROUP BY breakdown_values,
           intervals_from_base
  ORDER BY breakdown_values ASC,
           intervals_from_base ASC
  LIMIT 10000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1
  '
---
# name: TestRetention.test_retention_event_action
  '
  SELECT actor_activity.breakdown_values AS breakdown_values,
         actor_activity.intervals_from_base AS intervals_from_base,
         count(DISTINCT actor_activity.actor_id) AS count
  FROM
    (SELECT DISTINCT breakdown_values,
                     intervals_from_base,
                     actor_id
     FROM
       (SELECT target_event.breakdown_values AS breakdown_values,
               dateDiff('day', target_event.event_date, returning_event.event_date) AS intervals_from_base,
               returning_event.target AS actor_id
        FROM
          (SELECT DISTINCT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS event_date,
                           e__pdi.person_id AS target,
                           [dateDiff('day', toStartOfDay(toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), toStartOfDay(toTimeZone(e.timestamp, 'UTC')))] AS breakdown_values
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, 'sign up'), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-17 00:00:00.000000', 6, 'UTC'))))) AS target_event
        JOIN
          (SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS event_date,
                  e__pdi.person_id AS target
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$some_event'), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-17 00:00:00.000000', 6, 'UTC'))))
           GROUP BY target,
                    event_date) AS returning_event ON equals(returning_event.target, target_event.target)
        WHERE ifNull(greater(returning_event.event_date, target_event.event_date), 0)
        UNION ALL SELECT target_event.breakdown_values AS breakdown_values,
                         0 AS intervals_from_base,
                         target_event.target AS actor_id
        FROM
          (SELECT DISTINCT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS event_date,
                           e__pdi.person_id AS target,
                           [dateDiff('day', toStartOfDay(toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), toStartOfDay(toTimeZone(e.timestamp, 'UTC')))] AS breakdown_values
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, 'sign up'), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-17 00:00:00.000000', 6, 'UTC'))))) AS target_event)
     WHERE and(or(1, isNull(breakdown_values)), or(1, isNull(intervals_from_base)))) AS actor_activity
  GROUP BY breakdown_values,
           intervals_from_base
  ORDER BY breakdown_values ASC,
           intervals_from_base ASC
  LIMIT 10000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1
  '
---
# name: TestRetention.test_retention_with_user_properties_via_action
  '
  SELECT actor_activity.breakdown_values AS breakdown_values,
         actor_activity.intervals_from_base AS intervals_from_base,
         count(DISTINCT actor_activity.actor_id) AS count
  FROM
    (SELECT DISTINCT breakdown_values,
                     intervals_from_base,
                     actor_id
     FROM
       (SELECT target_event.breakdown_values AS breakdown_values,
               dateDiff('day', target_event.event_date, returning_event.event_date) AS intervals_from_base,
               returning_event.target AS actor_id
        FROM
          (SELECT DISTINCT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS event_date,
                           e__pdi.person_id AS target,
                           [dateDiff('day', toStartOfDay(toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), toStartOfDay(toTimeZone(e.timestamp, 'UTC')))] AS breakdown_values
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           INNER JOIN
             (SELECT person.id,
                     replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'email'), ''), 'null'), '^"|"$', '') AS properties___email
              FROM person
              WHERE and(equals(person.team_id, 2), ifNull(in(tuple(person.id, person.version),
                                                               (SELECT person.id, max(person.version) AS version
                                                                FROM person
                                                                WHERE equals(person.team_id, 2)
                                                                GROUP BY person.id
                                                                HAVING ifNull(equals(argMax(person.is_deleted, person.version), 0), 0))), 0)) SETTINGS optimize_aggregation_in_order=1) AS e__pdi__person ON equals(e__pdi.person_id, e__pdi__person.id)
           WHERE and(equals(e.team_id, 2), and(equals(e.event, '$pageview'), ifNull(equals(e__pdi__person.properties___email, 'person1@test.com'), 0)), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-17 00:00:00.000000', 6, 'UTC'))))) AS target_event
        JOIN
          (SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS event_date,
                  e__pdi.person_id AS target
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$pageview'), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-17 00:00:00.000000', 6, 'UTC'))))
           GROUP BY target,
                    event_date) AS returning_event ON equals(returning_event.target, target_event.target)
        WHERE ifNull(greater(returning_event.event_date, target_event.event_date), 0)
        UNION ALL SELECT target_event.breakdown_values AS breakdown_values,
                         0 AS intervals_from_base,
                         target_event.target AS actor_id
        FROM
          (SELECT DISTINCT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS event_date,
                           e__pdi.person_id AS target,
                           [dateDiff('day', toStartOfDay(toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), toStartOfDay(toTimeZone(e.timestamp, 'UTC')))] AS breakdown_values
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           INNER JOIN
             (SELECT person.id,
                     replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'email'), ''), 'null'), '^"|"$', '') AS properties___email
              FROM person
              WHERE and(equals(person.team_id, 2), ifNull(in(tuple(person.id, person.version),
                                                               (SELECT person.id, max(person.version) AS version
                                                                FROM person
                                                                WHERE equals(person.team_id, 2)
                                                                GROUP BY person.id
                                                                HAVING ifNull(equals(argMax(person.is_deleted, person.version), 0), 0))), 0)) SETTINGS optimize_aggregation_in_order=1) AS e__pdi__person ON equals(e__pdi.person_id, e__pdi__person.id)
           WHERE and(equals(e.team_id, 2), and(equals(e.event, '$pageview'), ifNull(equals(e__pdi__person.properties___email, 'person1@test.com'), 0)), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-17 00:00:00.000000', 6, 'UTC'))))) AS target_event)
     WHERE and(or(1, isNull(breakdown_values)), or(1, isNull(intervals_from_base)))) AS actor_activity
  GROUP BY breakdown_values,
           intervals_from_base
  ORDER BY breakdown_values ASC,
           intervals_from_base ASC
  LIMIT 10000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1
  '
---
# name: TestRetention.test_timezones
  '
  SELECT actor_activity.breakdown_values AS breakdown_values,
         actor_activity.intervals_from_base AS intervals_from_base,
         count(DISTINCT actor_activity.actor_id) AS count
  FROM
    (SELECT DISTINCT breakdown_values,
                     intervals_from_base,
                     actor_id
     FROM
       (SELECT target_event.breakdown_values AS breakdown_values,
               dateDiff('day', target_event.event_date, returning_event.event_date) AS intervals_from_base,
               returning_event.target AS actor_id
        FROM
          (SELECT DISTINCT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS event_date,
                           e__pdi.person_id AS target,
                           [dateDiff('day', toStartOfDay(toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), toStartOfDay(toTimeZone(e.timestamp, 'UTC')))] AS breakdown_values
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$pageview'), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-21 00:00:00.000000', 6, 'UTC'))))) AS target_event
        JOIN
          (SELECT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS event_date,
                  e__pdi.person_id AS target
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$pageview'), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-21 00:00:00.000000', 6, 'UTC'))))
           GROUP BY target,
                    event_date) AS returning_event ON equals(returning_event.target, target_event.target)
        WHERE ifNull(greater(returning_event.event_date, target_event.event_date), 0)
        UNION ALL SELECT target_event.breakdown_values AS breakdown_values,
                         0 AS intervals_from_base,
                         target_event.target AS actor_id
        FROM
          (SELECT DISTINCT toStartOfDay(toTimeZone(e.timestamp, 'UTC')) AS event_date,
                           e__pdi.person_id AS target,
                           [dateDiff('day', toStartOfDay(toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), toStartOfDay(toTimeZone(e.timestamp, 'UTC')))] AS breakdown_values
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$pageview'), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-10 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-21 00:00:00.000000', 6, 'UTC'))))) AS target_event)
     WHERE and(or(1, isNull(breakdown_values)), or(1, isNull(intervals_from_base)))) AS actor_activity
  GROUP BY breakdown_values,
           intervals_from_base
  ORDER BY breakdown_values ASC,
           intervals_from_base ASC
  LIMIT 10000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1
  '
---
# name: TestRetention.test_timezones.1
  '
  SELECT actor_activity.breakdown_values AS breakdown_values,
         actor_activity.intervals_from_base AS intervals_from_base,
         count(DISTINCT actor_activity.actor_id) AS count
  FROM
    (SELECT DISTINCT breakdown_values,
                     intervals_from_base,
                     actor_id
     FROM
       (SELECT target_event.breakdown_values AS breakdown_values,
               dateDiff('day', target_event.event_date, returning_event.event_date) AS intervals_from_base,
               returning_event.target AS actor_id
        FROM
          (SELECT DISTINCT toStartOfDay(toTimeZone(e.timestamp, 'US/Pacific')) AS event_date,
                           e__pdi.person_id AS target,
                           [dateDiff('day', toStartOfDay(toDateTime64('2020-06-10 00:00:00.000000', 6, 'US/Pacific')), toStartOfDay(toTimeZone(e.timestamp, 'US/Pacific')))] AS breakdown_values
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$pageview'), and(greaterOrEquals(toTimeZone(e.timestamp, 'US/Pacific'), toDateTime64('2020-06-10 00:00:00.000000', 6, 'US/Pacific')), lessOrEquals(toTimeZone(e.timestamp, 'US/Pacific'), toDateTime64('2020-06-21 00:00:00.000000', 6, 'US/Pacific'))))) AS target_event
        JOIN
          (SELECT toStartOfDay(toTimeZone(e.timestamp, 'US/Pacific')) AS event_date,
                  e__pdi.person_id AS target
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$pageview'), and(greaterOrEquals(toTimeZone(e.timestamp, 'US/Pacific'), toDateTime64('2020-06-10 00:00:00.000000', 6, 'US/Pacific')), lessOrEquals(toTimeZone(e.timestamp, 'US/Pacific'), toDateTime64('2020-06-21 00:00:00.000000', 6, 'US/Pacific'))))
           GROUP BY target,
                    event_date) AS returning_event ON equals(returning_event.target, target_event.target)
        WHERE ifNull(greater(returning_event.event_date, target_event.event_date), 0)
        UNION ALL SELECT target_event.breakdown_values AS breakdown_values,
                         0 AS intervals_from_base,
                         target_event.target AS actor_id
        FROM
          (SELECT DISTINCT toStartOfDay(toTimeZone(e.timestamp, 'US/Pacific')) AS event_date,
                           e__pdi.person_id AS target,
                           [dateDiff('day', toStartOfDay(toDateTime64('2020-06-10 00:00:00.000000', 6, 'US/Pacific')), toStartOfDay(toTimeZone(e.timestamp, 'US/Pacific')))] AS breakdown_values
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$pageview'), and(greaterOrEquals(toTimeZone(e.timestamp, 'US/Pacific'), toDateTime64('2020-06-10 00:00:00.000000', 6, 'US/Pacific')), lessOrEquals(toTimeZone(e.timestamp, 'US/Pacific'), toDateTime64('2020-06-21 00:00:00.000000', 6, 'US/Pacific'))))) AS target_event)
     WHERE and(or(1, isNull(breakdown_values)), or(1, isNull(intervals_from_base)))) AS actor_activity
  GROUP BY breakdown_values,
           intervals_from_base
  ORDER BY breakdown_values ASC,
           intervals_from_base ASC
  LIMIT 10000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1
  '
---
# name: TestRetention.test_week_interval
  '
  SELECT actor_activity.breakdown_values AS breakdown_values,
         actor_activity.intervals_from_base AS intervals_from_base,
         count(DISTINCT actor_activity.actor_id) AS count
  FROM
    (SELECT DISTINCT breakdown_values,
                     intervals_from_base,
                     actor_id
     FROM
       (SELECT target_event.breakdown_values AS breakdown_values,
               dateDiff('week', target_event.event_date, returning_event.event_date) AS intervals_from_base,
               returning_event.target AS actor_id
        FROM
          (SELECT DISTINCT toStartOfWeek(toTimeZone(e.timestamp, 'UTC'), 0) AS event_date,
                           e__pdi.person_id AS target,
                           [dateDiff('week', toStartOfWeek(toDateTime64('2020-06-07 00:00:00.000000', 6, 'UTC'), 0), toStartOfWeek(toTimeZone(e.timestamp, 'UTC'), 0))] AS breakdown_values
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$pageview'), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-07 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-07-27 00:00:00.000000', 6, 'UTC'))))) AS target_event
        JOIN
          (SELECT toStartOfWeek(toTimeZone(e.timestamp, 'UTC'), 0) AS event_date,
                  e__pdi.person_id AS target
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$pageview'), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-07 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-07-27 00:00:00.000000', 6, 'UTC'))))
           GROUP BY target,
                    event_date) AS returning_event ON equals(returning_event.target, target_event.target)
        WHERE ifNull(greater(returning_event.event_date, target_event.event_date), 0)
        UNION ALL SELECT target_event.breakdown_values AS breakdown_values,
                         0 AS intervals_from_base,
                         target_event.target AS actor_id
        FROM
          (SELECT DISTINCT toStartOfWeek(toTimeZone(e.timestamp, 'UTC'), 0) AS event_date,
                           e__pdi.person_id AS target,
                           [dateDiff('week', toStartOfWeek(toDateTime64('2020-06-07 00:00:00.000000', 6, 'UTC'), 0), toStartOfWeek(toTimeZone(e.timestamp, 'UTC'), 0))] AS breakdown_values
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$pageview'), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-07 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-07-27 00:00:00.000000', 6, 'UTC'))))) AS target_event)
     WHERE and(or(1, isNull(breakdown_values)), or(1, isNull(intervals_from_base)))) AS actor_activity
  GROUP BY breakdown_values,
           intervals_from_base
  ORDER BY breakdown_values ASC,
           intervals_from_base ASC
  LIMIT 10000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1
  '
---
# name: TestRetention.test_week_interval.1
  '
  SELECT actor_activity.breakdown_values AS breakdown_values,
         actor_activity.intervals_from_base AS intervals_from_base,
         count(DISTINCT actor_activity.actor_id) AS count
  FROM
    (SELECT DISTINCT breakdown_values,
                     intervals_from_base,
                     actor_id
     FROM
       (SELECT target_event.breakdown_values AS breakdown_values,
               dateDiff('week', target_event.event_date, returning_event.event_date) AS intervals_from_base,
               returning_event.target AS actor_id
        FROM
          (SELECT DISTINCT toStartOfWeek(toTimeZone(e.timestamp, 'UTC'), 3) AS event_date,
                           e__pdi.person_id AS target,
                           [dateDiff('week', toStartOfWeek(toDateTime64('2020-06-08 00:00:00.000000', 6, 'UTC'), 3), toStartOfWeek(toTimeZone(e.timestamp, 'UTC'), 3))] AS breakdown_values
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$pageview'), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-08 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-07-27 00:00:00.000000', 6, 'UTC'))))) AS target_event
        JOIN
          (SELECT toStartOfWeek(toTimeZone(e.timestamp, 'UTC'), 3) AS event_date,
                  e__pdi.person_id AS target
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$pageview'), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-08 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-07-27 00:00:00.000000', 6, 'UTC'))))
           GROUP BY target,
                    event_date) AS returning_event ON equals(returning_event.target, target_event.target)
        WHERE ifNull(greater(returning_event.event_date, target_event.event_date), 0)
        UNION ALL SELECT target_event.breakdown_values AS breakdown_values,
                         0 AS intervals_from_base,
                         target_event.target AS actor_id
        FROM
          (SELECT DISTINCT toStartOfWeek(toTimeZone(e.timestamp, 'UTC'), 3) AS event_date,
                           e__pdi.person_id AS target,
                           [dateDiff('week', toStartOfWeek(toDateTime64('2020-06-08 00:00:00.000000', 6, 'UTC'), 3), toStartOfWeek(toTimeZone(e.timestamp, 'UTC'), 3))] AS breakdown_values
           FROM events AS e
           INNER JOIN
             (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
                     person_distinct_id2.distinct_id AS distinct_id
              FROM person_distinct_id2
              WHERE equals(person_distinct_id2.team_id, 2)
              GROUP BY person_distinct_id2.distinct_id
              HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS e__pdi ON equals(e.distinct_id, e__pdi.distinct_id)
           WHERE and(equals(e.team_id, 2), equals(e.event, '$pageview'), and(greaterOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-06-08 00:00:00.000000', 6, 'UTC')), lessOrEquals(toTimeZone(e.timestamp, 'UTC'), toDateTime64('2020-07-27 00:00:00.000000', 6, 'UTC'))))) AS target_event)
     WHERE and(or(1, isNull(breakdown_values)), or(1, isNull(intervals_from_base)))) AS actor_activity
  GROUP BY breakdown_values,
           intervals_from_base
  ORDER BY breakdown_values ASC,
           intervals_from_base ASC
  LIMIT 10000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1
  '
---
